# artix-tui-installer

./: .gitignore  ARCHITECTURE.en.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md
.github/workflows/: ci.yml
installer/: Cargo.toml
installer/i18n/: en.toml  uk.toml
installer/src/: app.rs  event.rs  i18n.rs  main.rs  rollback.rs  theme.rs
installer/src/assets/: fastfetch.jsonc  waybar.config.jsonc  waybar.style.css  wofi.config  wofi.style.css
installer/src/assets/pinnacle/: Cargo.toml
installer/src/assets/pinnacle/scripts/: clipboard.sh  launcher.sh  mango-tags.sh
installer/src/assets/pinnacle/src/: main.rs
installer/src/screens/: aur.rs  desktop.rs  disk.rs  finish.rs  kernel.rs  keyboard.rs  language.rs  mod.rs  mode.rs  nav.rs  options.rs  packages.rs  recovery.rs  storage.rs  summary.rs  timezone.rs  user.rs  widgets.rs  wifi.rs  wifitest.rs
installer/src/system/: disk.rs  install.rs  mod.rs  packages.rs  recovery.rs  runner.rs
installer/src/system/install/: helpers.rs  mirrors.rs  mod.rs  packages.rs  scripts.rs
iso-profile/: Packages-Live  Packages-Root  profile.conf
iso-profile/grub-overrides/: README.md  loopback.cfg
iso-profile/live-overlay/etc/: vconsole.conf
iso-profile/live-overlay/etc/dinit.d/: README.tty  console-font.conf  installer.conf
iso-profile/live-overlay/etc/dinit.d/boot.d/: seatd
iso-profile/live-overlay/home/artix/: wifi-test.sh
scripts/: release.sh  wifi-test.sh
